@@ -1,8 +1,3 @@
-# We need mips16.
-add_multilib_option ""
-
-# And we use the lsi linker script.
-set_board_info ldscript "-Wl,-Tdve.ld"
-
-# Otherwise we're the same as the standard MIPS simulator.
+# This file is unnecessary, but we'll keep it for now.
+# We're the same as the standard MIPS simulator.
 load_base_board_description "mips-sim";
