@@ -1,3 +1,9 @@
+Fri Jul 21 16:01:43 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	From 2000-04-25 Felix Lee <flee@cygnus.com>:
+	* baseboards/tx39-sim.exp: Use idt, not dve linker script.  Delete
+ 	misleading comments and null statements.
+
 2000-07-08  Angela Marie Thomas <angela@cygnus.com>
 
 	* lib/framework.exp: Use compiler_conditional_xfail_data as a global
